<resources>
    <string name="app_name">BeFounder</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_auth_image_transition">fromStartToAuthTransition</string>
    <string name="not_registered_yet"><u>Еще нет аккаунта?</u></string>
    <string name="log_in">Войти</string>
    <string name="forgot_password"><u>восстановить пароль</u></string>
    <string name="login_hint">почта</string>
    <string name="pass_hint">пароль</string>
    <string name="enter">Вход</string>
    <string name="_continue">Продолжить</string>
    <string name="repeat_pass">повторите пароль</string>
    <string name="input_password">введите пароль</string>
    <string name="register">Регистрация</string>
    <string name="password_are_equals">пароли совпадают</string>
    <string name="password_are_not_equals">пароли не совпадают</string>
    <string name="name">имя</string>
    <string name="phone">телефон</string>
    <string name="surname">фамилия</string>
    <string name="finish">Завершить</string>
    <string name="your_skills_and_prefs">Ваши навыки и предпочтения</string>
    <string name="specialization">специальность</string>
    <string name="specialization2">Специальность:</string>
    <string name="tell_about_you">о себе</string>
    <string name="tell_about_you2">О себе:</string>
    <string name="experience">опыт работы</string>
    <string name="experience2">Опыт работы:</string>
    <string name="for_example">например, mvc</string>
    <string name="map">Карта</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="filters">Фильтры</string>
    <string name="log_out">Выйти</string>
    <string name="start_app_name"><font color="#FFFFFF">Be</font>Founder</string>
    <string name="chats">Чаты</string>
    <string name="type_smth">Напишите что-нибудь…</string>
    <string name="error_while_sending">Ошибка при отправке сообщения</string>
    <string name="cant_send_message">Не удалось отправить сообщение</string>
    <string name="old_pass_hint">старый пароль</string>
    <string name="save">Сохранить</string>
    <string name="new_pass_hint">новый пароль</string>
    <string name="confirm">Подтвердите</string>
    <string name="ok">Ок</string>
    <string name="close">Закрыть</string>
    <string name="error_while_editing_profile">Не удалось обновить данные профиля</string>
    <string name="wrong_fields">Поля заполнены неверно</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_phone_label">Телефон:</string>
    <string name="projects">Проекты</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_project">Создать проект</string>
    <string name="project_name">название проекта</string>
    <string name="project_description">описание проекта</string>
    <string name="add_role">Добавить должность</string>
    <string name="salary">Зарплата</string>
    <string name="delete">Удалить</string>
    <string name="for_example2">например, android</string>
    <string name="show_tags_for_employees">Укажите тэги для соискателей</string>
    <string name="fields_are_empty">Не все поля заполнены</string>
    <string name="cant_save_project">Не удалось сохранить проект</string>
    <string name="assign">Назначить</string>
    <string name="input_name">введите имя</string>
    <string name="you_may_have_only_one_project">Вы можете иметь максимум 1 проект</string>
    <string name="point_location_of_project">Укажите местоположение проекта</string>
    <string name="choose_from_map">выбрать на карте</string>
    <string name="choose_location">Выбрать место</string>
    <string name="you_didnt_choose_place">Вы не выбрали место</string>
    <string name="place_is_necessary">Необходимо указать местоположение</string>
    <string name="write">Написать</string>
    <string name="needed">"требуется: "</string>
    <string name="exp_of_work">"опыт работы: "</string>
    <string name="msg_no_location">Для работы приложения необходимо включить передачу геоданных</string>
    <string name="remove_from_recommendations">Убрать из рекомендаций</string>
    <string name="recommendations">Рекомендации</string>

    <string-array name="categories">
        <item name="all">Все</item>
        <item name="specialists">Специалисты</item>
        <item name="projects">Проекты</item>
    </string-array>

    <string-array name="salary_types">
        <item name="percent">%</item>
        <item name="euro">€</item>
        <item name="dollar">$</item>
        <item name="ruble">₽</item>
    </string-array>

    <plurals name="years">
        <item quantity="one">%d год</item>
        <item quantity="few">%d года</item>
        <item quantity="many">%d лет</item>
        <item quantity="other">%1$d года</item>
    </plurals>
</resources>