<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragments.FirstStepFragment">

    <data>

        <variable
            name="model"
            type="com.skyletto.startappfrontend.ui.auth.viewmodels.SharedAuthViewModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/main_background"
        android:paddingBottom="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textAllCaps="true"
            android:fontFamily="@font/rubik_regular"
            android:layout_marginBottom="60dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:id="@+id/auth_register_email_input"
            style="@style/input_style"
            android:inputType="textEmailAddress"
            android:hint="@string/login_hint"
            android:text="@={model.profile.email}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:passwordToggleDrawable="@drawable/asl_password_visibility"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                style="@style/input_style"
                android:id="@+id/auth_register_pass_input"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:text="@={model.profile.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:passwordToggleDrawable="@drawable/asl_password_visibility"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                style="@style/input_style"
                android:id="@+id/auth_register_pass_repeat_input"
                android:hint="@string/repeat_pass"
                android:inputType="textPassword"
                android:text="@={model.passRepeat}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/pass_equals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:textColor="@color/green"
            android:text="@string/password_are_equals"
            android:layout_marginTop="3dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/pass_not_equals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:textColor="@color/red"
            android:text="@string/password_are_not_equals"
            android:layout_marginTop="3dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/first_step_cont_btn"
            style="@style/button_style"
            android:text="@string/_continue"
            android:enabled="@{model.passAndEmailOk}"
            android:onClick="@{(view)->model.nextStep()}"
            android:layout_marginTop="60dp"
            />
    </LinearLayout>

</layout>