<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragments.ThirdStepFragment">

    <data>

        <variable
            name="model"
            type="com.skyletto.startappfrontend.ui.auth.viewmodels.SharedAuthViewModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/main_background"
        android:paddingBottom="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginBottom="60dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/input_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="textPersonName"
            android:hint="@string/specialization"
            android:text="@={model.profile.title}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeWidth="0dp">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/input_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:lines="5"
            android:hint="@string/tell_about_you"
            android:text="@={model.profile.description}"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeWidth="0dp">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/input_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="numberDecimal"
            android:hint="@string/experience"
            android:text="@={model.profile.experience}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="35dp"
            android:text="@string/your_skills_and_prefs"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:layout_gravity="start"
            android:layout_marginHorizontal="60dp"/>

        <EditText
            android:id="@+id/auth_tag_name_input"
            style="@style/input_style"
            android:layout_marginTop="8dp"
            android:textColor="@color/dark"
            android:background="@drawable/tags_input_shape"
            android:inputType="text"
            android:hint="@string/for_example"
            android:textColorHint="@color/dark"
            android:drawableStart="@drawable/search_icon"
            android:paddingHorizontal="5dp"
            />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/auth_third_step_entry_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="30dp"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/auth_third_step_choose_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"/>


        <Button
            android:id="@+id/third_step_cont_btn"
            style="@style/button_style"
            android:layout_marginTop="50dp"
            android:onClick="@{(view)->model.finish()}"
            android:text="@string/finish" />

    </LinearLayout>

</layout>